# complipilot

.github/workflows/: ci.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: db.py  main.py  models.py
backend/app/auth/: models.py  routes.py  schemas.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 72278e544804_create_user_table.py
backend/tests/: test_auth_flow.py
docs/: index.html
